--- a/Merge_af_NLP_Friends.ipynb
+++ b/Merge_af_NLP_Friends.ipynb
@@ -13,7 +13,8 @@
         "uy8anIthSTXZ",
         "g-OSrXMTeA6i"
       ],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -25,11 +26,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GGOrcQ2QEf7u",
+        "id": "view-in-github",
         "colab_type": "text"
       },
       "source": [
-        "This notebook is inspired by:https://github.com/graykode/nlp-tutorial"
+        "<a href=\"https://colab.research.google.com/github/LauJohansson/DeepLearning_NLP_Friends/blob/master/Merge_af_NLP_Friends.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -84,6 +85,16 @@
       },
       "source": [
         "# **Initialising Friends data**\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aLpYqib8PeGH",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1JzPdBavHFL-8R1Tc0F6z9KlELR326MXy)\n"
       ]
     },
     {
@@ -208,7 +219,7 @@
       },
       "source": [
         "# **Initialising Penn Tree Bank data**\n",
-        "![alt text](https://drive.google.com/uc?id=17DxcQyeF7RPs9mKOsDJtC6-bSzrno71v)"
+        "![alt text](https://drive.google.com/uc?id=1A8SY9dmsLx2hoanWWWhT_IJnJcJOmluR)\n"
       ]
     },
     {
