--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -161,10 +161,10 @@
       "metadata": {
         "id": "Agm7zSvWzYoX",
         "colab_type": "code",
-        "outputId": "199fd20b-f2b5-40a6-e1ed-b6cc973a19c1",
+        "outputId": "e13dc5cd-2831-404f-a7e1-14ca795bcd29",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 0
         }
       },
       "source": [
@@ -185,7 +185,7 @@
         "      \n",
         "\n"
       ],
-      "execution_count": 12,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,27 +273,27 @@
       "metadata": {
         "id": "GxcklPI-kB19",
         "colab_type": "code",
-        "outputId": "22869b85-d3b3-4e69-ad16-9b41fc787d97",
+        "outputId": "124730bc-cb33-40bc-d4a5-4cc2ce9f5795",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 0
         }
       },
       "source": [
         "net = RNNModule(n_vocab, flags.seq_size,\n",
         "                    flags.embedding_size, flags.lstm_size)\n",
         "\n",
-        "#net.load_state_dict(torch.load('/content/drive/My Drive/DL_project/net_final.pth'))\n",
-        "net_from_git=urlopen('https://raw.githubusercontent.com/LauJohansson/DeepLearning_NLP_Friends/master/Data/net_final_online_ToGenerator_v1.pth').read()\n",
+        "net.load_state_dict(torch.hub.load_state_dict_from_url('https://raw.githubusercontent.com/LauJohansson/DeepLearning_NLP_Friends/master/Data/net_final_online_ToGenerator_v1.pth'))\n",
         "\n",
-        "net.load_state_dict(torch.load('/content/drive/My Drive/DL_project/net_final_online_ToGenerator_v1.pth'))\n",
+        "\n",
+        "\n",
         "\n",
         "net = net.to(device)\n",
         "\n",
         "net.eval()\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +310,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 40
         }
       ]
     },
@@ -396,7 +396,7 @@
         "\n",
         "  number_of_words = int(input(\"Please enter the number of words that your Friends manuscript should contain: \"))\n",
         "\n",
-        "  randomness = int(input(\"Choose a number from 1-100 (if 1, then there is no randomness in word prediction): \"))\n",
+        "  randomness = int(input(\"Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): \"))\n",
         "\n",
         "  if randomness <1:\n",
         "    randomness=1\n",
@@ -444,32 +444,73 @@
       "metadata": {
         "id": "Hsw82MiX2DTp",
         "colab_type": "code",
-        "outputId": "17b65d09-8bdf-4031-bb04-df13318edcbf",
+        "outputId": "561eeba7-0ca8-4fff-b37a-ecea32727f18",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 221
+          "height": 938
         }
       },
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 19,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Please enter the first word of your Friends manuscript (seperate with space): chandler kicks\n",
-            "Please enter the number of words that your Friends manuscript should contain: 100\n",
-            "Choose a number from 1-100 (if 1, then there is no randomness in word prediction): 5\n",
+            "Please enter the first word of your Friends manuscript (seperate with space): chandler and monica\n",
+            "Please enter the number of words that your Friends manuscript should contain: 1000\n",
+            "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 5\n",
             "\n",
             "\n",
-            "[ scene: chandler kicks the apartment with the phone on , joey enters with her apartment to find her and sees the chick . ) \n",
-            "joey what ? \n",
-            "joey hey , you are so sweet ! \n",
-            "monica:: oh ! oh , yeah ? ( to the duck and ross ) what are i talking ? \n",
-            "chandler: i'm not supposed . i'm just gonna have the same thing , i'm not . \n",
-            "joey i know what i did ? \n",
-            "monica:: ( to phoebe in tow , and sees joey , chandler , joey ) hey joey , joey and i know you were going to go\n"
+            "[ scene: chandler and \n",
+            "monica: and joey's erm - <unk> and the gang , chandler enters from her . chandler , and rachel , chandler . and phoebe , joey , \n",
+            "monica: . \n",
+            "monica: . \n",
+            "monica: ] \n",
+            "joey what do it mean you ? \n",
+            "chandler: oh , it wasn't a little bit of my stuff ! ( they kiss to see him and ross is shocked . ) \n",
+            "ross: what are i talking to ? \n",
+            "joey oh no ! you guys are not ! \n",
+            "monica:: oh no . \n",
+            "joey no - no i - i'm gonna go ! ( to joey and joey , joey and rachel both enter . ) \n",
+            "joey hey ! ( she turns off to chandler and joey is sitting at him ) \n",
+            "joey what ? what is this doing with you ? \n",
+            "joey i know , but i'm not . ( chandler and ross both are stunned to leave . ) \n",
+            "joey okay . \n",
+            "chandler: okay - hey . \n",
+            "chandler: okay ! \n",
+            "chandler: so , i don't think i could get the part , i'm just not a big thing ! i - i know i am gonna go . \n",
+            "monica:: oh my ! \n",
+            "joey i can't . i know , i'm gonna go get my new <unk> . ( joey is shocked , then chandler gets a picture on it and chandler goes over with him and sees him on a date and the door . joey is shocked and chandler , who are in his mouth , but he is still not a <unk> . he starts looking in the window . he has just been in a <unk> , but she stops and starts looking around for his face and he starts a little more <unk> , which he does it again with her , but then then he goes over and sits back into his head . ) \n",
+            "chandler: i can't ! \n",
+            "chandler: what did you want to say that you were ? \n",
+            "joey well it's not like i don't care . \n",
+            "monica:: what did you say you mean i - i'm - it's a <unk> ? ! \n",
+            "joey well it's just , i'm gonna get it . i'm - you're gonna have this stuff to go . \n",
+            "joey ( on his hand ) okay - bye ! okay ! i have to take it out and i'm sorry . i don't have anything . i'm - you're - you're gonna do this , but you know , but i'm gonna get out and then you have to get a big deal with me , y'know ? \n",
+            "chandler: okay , i'm just sure i could get the <unk> <unk> and then you get the money . ( they all leave . ] \n",
+            "chandler: ( to ross ) you know , i was gonna be in your apartment with my <unk> - tay . \n",
+            "joey ( entering ) hello . \n",
+            "rachel: hi ! \n",
+            "chandler: so i got the phone . \n",
+            "joey i didn't think i could . i mean i was thinking about the <unk> i was just thinking . i think it just is so good to you ! \n",
+            "chandler: i think i could . \n",
+            "monica:: okay i can ! \n",
+            "chandler: well , you don't want it . \n",
+            "joey no , no ! it's a good deal ! y'know i just have the same part of you . and you have the first time ! ( the camera starts to walk out with a <unk> and <unk> a woman and chandler enters with a huge - old guy and a man ! the <unk> , and \n",
+            "monica: and ross look in a couple and a little . \" and a woman <unk> , <unk> <unk> , <unk> the rest <unk> , which time they start . ) \n",
+            "monica:: you guys have no idea , but i don't care . \n",
+            "joey well what , if you have any idea . \n",
+            "joey ( entering , wearing an idea of the fridge and the gang in front with his hands and his hands ) what did it say ? \n",
+            "joey i - i'm just trying for my <unk> . \n",
+            "joey ( to the duck , who is not a little <unk> . ) okay . so uh , you are not gonna have the same way that you don't know ? \n",
+            "chandler: yeah , yeah ! ( pause , he turns around , then he goes into the kitchen , and sees that chandler is in his mouth with his face on a bonnet with his mouth and he puts a <unk> around in her head and his face and starts looking for his face as joey . joey is shocked . he doesn't like the rest . he doesn't like to be a very good guy and joey has just to see it on the table with him and the next time is the one with her head . it doesn't like the <unk> , it just like a <unk> - it doesn't sound of the one . ) ( the next flashback to joey . ] \n",
+            "ross: what the hell ? ! what happened ! ( he looks at the ring . the camera pans off to joey and rachel who has to be a couple of their pants on a face . he starts laughing , and joey quickly glares around him , but she goes back into a while he sees that he has the same time , then the one that the first flashback is from his hand in the <unk> and chandler and joey start laughing . ] \n",
+            "ross: i think you should have one more of that . ( the flashback walks over . ] \n",
+            "rachel: okay . \n",
+            "chandler: oh , it's okay . it's just the <unk> of the world , it's a big one for my new . ( joey enters , sees the guy in a sexy , and starts laughing with him ) \n",
+            "monica:: i know , you know\n"
           ],
           "name": "stdout"
         }
