--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -41,7 +41,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Press \"runtime\" -> \"run all\"**\n",
+        "**In the top bar of this webpage press \"runtime\" -> \"run all\"**\n",
+        "\n",
+        "**Just skip the chapter called \"Code\"**\n",
         "\n",
         "**In the bottom of this notebook, there will pop up input-boxes. Here's an example of what you can give as inputs:**\n",
         "\n",
@@ -61,7 +63,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Code"
+        "#Code (Skip this part)"
       ]
     },
     {
@@ -161,7 +163,7 @@
       "metadata": {
         "id": "Agm7zSvWzYoX",
         "colab_type": "code",
-        "outputId": "e13dc5cd-2831-404f-a7e1-14ca795bcd29",
+        "outputId": "c6880e38-fb77-43b9-f8b0-4974475e30cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -185,7 +187,7 @@
         "      \n",
         "\n"
       ],
-      "execution_count": 38,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +275,7 @@
       "metadata": {
         "id": "GxcklPI-kB19",
         "colab_type": "code",
-        "outputId": "124730bc-cb33-40bc-d4a5-4cc2ce9f5795",
+        "outputId": "360e0107-206a-483d-f57a-9715cd33c9ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -293,7 +295,7 @@
         "net.eval()\n",
         "\n"
       ],
-      "execution_count": 40,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -310,7 +312,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 20
         }
       ]
     },
@@ -444,73 +446,31 @@
       "metadata": {
         "id": "Hsw82MiX2DTp",
         "colab_type": "code",
-        "outputId": "561eeba7-0ca8-4fff-b37a-ecea32727f18",
+        "outputId": "71dd1755-c0cd-4150-8511-b2b3ff7cd63b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 938
+          "height": 224
         }
       },
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 44,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Please enter the first word of your Friends manuscript (seperate with space): chandler and monica\n",
-            "Please enter the number of words that your Friends manuscript should contain: 1000\n",
-            "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 5\n",
+            "Please enter the first word of your Friends manuscript (seperate with space): laugh\n",
+            "Please enter the number of words that your Friends manuscript should contain: 200\n",
+            "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 10\n",
             "\n",
             "\n",
-            "[ scene: chandler and \n",
-            "monica: and joey's erm - <unk> and the gang , chandler enters from her . chandler , and rachel , chandler . and phoebe , joey , \n",
-            "monica: . \n",
-            "monica: . \n",
-            "monica: ] \n",
-            "joey what do it mean you ? \n",
-            "chandler: oh , it wasn't a little bit of my stuff ! ( they kiss to see him and ross is shocked . ) \n",
-            "ross: what are i talking to ? \n",
-            "joey oh no ! you guys are not ! \n",
-            "monica:: oh no . \n",
-            "joey no - no i - i'm gonna go ! ( to joey and joey , joey and rachel both enter . ) \n",
-            "joey hey ! ( she turns off to chandler and joey is sitting at him ) \n",
-            "joey what ? what is this doing with you ? \n",
-            "joey i know , but i'm not . ( chandler and ross both are stunned to leave . ) \n",
-            "joey okay . \n",
-            "chandler: okay - hey . \n",
-            "chandler: okay ! \n",
-            "chandler: so , i don't think i could get the part , i'm just not a big thing ! i - i know i am gonna go . \n",
-            "monica:: oh my ! \n",
-            "joey i can't . i know , i'm gonna go get my new <unk> . ( joey is shocked , then chandler gets a picture on it and chandler goes over with him and sees him on a date and the door . joey is shocked and chandler , who are in his mouth , but he is still not a <unk> . he starts looking in the window . he has just been in a <unk> , but she stops and starts looking around for his face and he starts a little more <unk> , which he does it again with her , but then then he goes over and sits back into his head . ) \n",
-            "chandler: i can't ! \n",
-            "chandler: what did you want to say that you were ? \n",
-            "joey well it's not like i don't care . \n",
-            "monica:: what did you say you mean i - i'm - it's a <unk> ? ! \n",
-            "joey well it's just , i'm gonna get it . i'm - you're gonna have this stuff to go . \n",
-            "joey ( on his hand ) okay - bye ! okay ! i have to take it out and i'm sorry . i don't have anything . i'm - you're - you're gonna do this , but you know , but i'm gonna get out and then you have to get a big deal with me , y'know ? \n",
-            "chandler: okay , i'm just sure i could get the <unk> <unk> and then you get the money . ( they all leave . ] \n",
-            "chandler: ( to ross ) you know , i was gonna be in your apartment with my <unk> - tay . \n",
-            "joey ( entering ) hello . \n",
-            "rachel: hi ! \n",
-            "chandler: so i got the phone . \n",
-            "joey i didn't think i could . i mean i was thinking about the <unk> i was just thinking . i think it just is so good to you ! \n",
-            "chandler: i think i could . \n",
-            "monica:: okay i can ! \n",
-            "chandler: well , you don't want it . \n",
-            "joey no , no ! it's a good deal ! y'know i just have the same part of you . and you have the first time ! ( the camera starts to walk out with a <unk> and <unk> a woman and chandler enters with a huge - old guy and a man ! the <unk> , and \n",
-            "monica: and ross look in a couple and a little . \" and a woman <unk> , <unk> <unk> , <unk> the rest <unk> , which time they start . ) \n",
-            "monica:: you guys have no idea , but i don't care . \n",
-            "joey well what , if you have any idea . \n",
-            "joey ( entering , wearing an idea of the fridge and the gang in front with his hands and his hands ) what did it say ? \n",
-            "joey i - i'm just trying for my <unk> . \n",
-            "joey ( to the duck , who is not a little <unk> . ) okay . so uh , you are not gonna have the same way that you don't know ? \n",
-            "chandler: yeah , yeah ! ( pause , he turns around , then he goes into the kitchen , and sees that chandler is in his mouth with his face on a bonnet with his mouth and he puts a <unk> around in her head and his face and starts looking for his face as joey . joey is shocked . he doesn't like the rest . he doesn't like to be a very good guy and joey has just to see it on the table with him and the next time is the one with her head . it doesn't like the <unk> , it just like a <unk> - it doesn't sound of the one . ) ( the next flashback to joey . ] \n",
-            "ross: what the hell ? ! what happened ! ( he looks at the ring . the camera pans off to joey and rachel who has to be a couple of their pants on a face . he starts laughing , and joey quickly glares around him , but she goes back into a while he sees that he has the same time , then the one that the first flashback is from his hand in the <unk> and chandler and joey start laughing . ] \n",
-            "ross: i think you should have one more of that . ( the flashback walks over . ] \n",
-            "rachel: okay . \n",
-            "chandler: oh , it's okay . it's just the <unk> of the world , it's a big one for my new . ( joey enters , sees the guy in a sexy , and starts laughing with him ) \n",
-            "monica:: i know , you know\n"
+            "[ scene: laugh , rachel walks back out . the phone . . ) mrs and green is in his room for me as <unk> . \n",
+            "ross: i'm a big person who - is this guy who - i don't like the last person about your life ! mrs green: yeah , you do ! you don't know . \n",
+            "phoebe: okay look . okay , well what about it with me and then i have some things in that ? \n",
+            "phoebe: i know , and i'm not a very nice woman who wants the other date , you do so good in , <unk> . . [ phoebe enters ] hey you see you a second woman and your friend ? \n",
+            "phoebe: ( pause as chandler is standing on it and ross enters ) i'm going back here and i'm here as i just thought i could tell you . [ cut for joey , rachel comes out from her apartment , as phoebe comes back and opens his head in disgust in . ] \n",
+            "monica:: what 'cha are gonna doing on the door in here for ya , i am , uh i'm sorry and then you're in this job , but it's\n"
           ],
           "name": "stdout"
         }
