--- a/Friends_Generator.ipynb
+++ b/Friends_Generator.ipynb
@@ -41,9 +41,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**In the top bar of this webpage press \"runtime\" -> \"run all\"**\n",
-        "\n",
-        "**Just skip the chapter called \"Code\"**\n",
+        "**Press \"runtime\" -> \"run all\"**\n",
         "\n",
         "**In the bottom of this notebook, there will pop up input-boxes. Here's an example of what you can give as inputs:**\n",
         "\n",
@@ -63,7 +61,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Code (Skip this part)"
+        "#Code"
       ]
     },
     {
@@ -163,10 +161,10 @@
       "metadata": {
         "id": "Agm7zSvWzYoX",
         "colab_type": "code",
-        "outputId": "c6880e38-fb77-43b9-f8b0-4974475e30cf",
+        "outputId": "b3ed3897-ec81-4305-b958-bd4fc0e7405d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 34
         }
       },
       "source": [
@@ -187,7 +185,7 @@
         "      \n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,10 +273,10 @@
       "metadata": {
         "id": "GxcklPI-kB19",
         "colab_type": "code",
-        "outputId": "360e0107-206a-483d-f57a-9715cd33c9ca",
+        "outputId": "e5b2542e-dec8-473a-9e33-02f1e646ab89",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 173
         }
       },
       "source": [
@@ -295,8 +293,16 @@
         "net.eval()\n",
         "\n"
       ],
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading: \"https://raw.githubusercontent.com/LauJohansson/DeepLearning_NLP_Friends/master/Data/net_final_online_ToGenerator_v1.pth\" to /root/.cache/torch/checkpoints/net_final_online_ToGenerator_v1.pth\n",
+            "100%|██████████| 47.6M/47.6M [00:00<00:00, 282MB/s]\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -312,7 +318,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -337,6 +343,13 @@
         "\n",
         "    _, top_ix = torch.topk(output[0], k=top_k)\n",
         "    choices = top_ix.tolist()\n",
+        "\n",
+        "    #Removing \"<unk>\" from the predictions\n",
+        "    remove_unk=[\"<unk>\"]\n",
+        "    for word in list(choices):  # iterating on a copy since removing will mess things up\n",
+        "      if word in remove_unk:\n",
+        "        choices.remove(word)\n",
+        "\n",
         "    choice = np.random.choice(choices[0]) #A way to avoid always choose like \"and\" \"then\"..... \n",
         "\n",
         "    words.append(int_to_vocab[choice])\n",
@@ -446,31 +459,56 @@
       "metadata": {
         "id": "Hsw82MiX2DTp",
         "colab_type": "code",
-        "outputId": "71dd1755-c0cd-4150-8511-b2b3ff7cd63b",
+        "outputId": "5536d2b1-916d-47fc-af04-0be2b1c458ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 649
         }
       },
       "source": [
         "generate_manuscript()"
       ],
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Please enter the first word of your Friends manuscript (seperate with space): laugh\n",
-            "Please enter the number of words that your Friends manuscript should contain: 200\n",
-            "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 10\n",
+            "Please enter the first word of your Friends manuscript (seperate with space): chandler and the duck\n",
+            "Please enter the number of words that your Friends manuscript should contain: 1000\n",
+            "Choose a number from 1-100 (recommend 5) (if 1, then there is no randomness in word prediction): 5\n",
             "\n",
             "\n",
-            "[ scene: laugh , rachel walks back out . the phone . . ) mrs and green is in his room for me as <unk> . \n",
-            "ross: i'm a big person who - is this guy who - i don't like the last person about your life ! mrs green: yeah , you do ! you don't know . \n",
-            "phoebe: okay look . okay , well what about it with me and then i have some things in that ? \n",
-            "phoebe: i know , and i'm not a very nice woman who wants the other date , you do so good in , <unk> . . [ phoebe enters ] hey you see you a second woman and your friend ? \n",
-            "phoebe: ( pause as chandler is standing on it and ross enters ) i'm going back here and i'm here as i just thought i could tell you . [ cut for joey , rachel comes out from her apartment , as phoebe comes back and opens his head in disgust in . ] \n",
-            "monica:: what 'cha are gonna doing on the door in here for ya , i am , uh i'm sorry and then you're in this job , but it's\n"
+            "[ scene: chandler and the duck and chandler is entering with a woman . ] \n",
+            "ross: so ? \n",
+            "monica:: hey - huh , what's the hell do this matter here is that ? ! \n",
+            "joey well , it's not the best part of my stuff is just like it ! ( they both turn to the window at his face but joey is still on the table . ) \n",
+            "chandler: ( in her ear , with his mouthful in ) oh no ! no ! no ! ! no - n - ha no no . ( to joey and rachel are there for his <unk> ) ( chandler is sitting around her chair ) i mean , i - i'm - you know that you know , i think it's just the way i can do , you have to get to be here with me . \n",
+            "monica:: well you have the first day with that i can do that . i just think i'm just saying , i'm gonna be here , but it's just the <unk> that i can be with you to do this . \n",
+            "monica:: okay , okay , i - i'll be in the way i got you . \n",
+            "joey i think you're not really good ! \n",
+            "joey ( pause , and then he goes back to the table with her and he stops and sees her and he starts in pain ) oh my ! \n",
+            "chandler: ( entering ) i know what i'm going on ! i'm just a good one ! i'm sorry ! i can't tell ya , you don't want me , and you don't think you're going to have this job for the baby , and the <unk> - ( the guy walks over with his hands to his desk ) and i - and i'm - and you - we just - you're just , you're just a little , and you are , i mean i - you - you're gonna go with this guy ? ( joey nods . ) \n",
+            "chandler: i think it's a big time to see you and i just wanted it . \n",
+            "chandler: ( to phoebe again with her ) hey , you can go out and tell him about that ! \n",
+            "chandler: no . \n",
+            "monica:: i don't think you're gonna have any idea for a <unk> of <unk> ! \n",
+            "chandler: well then i just have some money . i just don't have a date for my friend , but i don't think you should be the one . \n",
+            "chandler: well what are it gonna happen about to me for the <unk> - - or ? \n",
+            "chandler: ( pause . ) i'm just a <unk> . \n",
+            "chandler: yeah . okay . \n",
+            "joey all okay , fine ! all the way i got you to get to get out . okay now you have some of the most of the sudden i ever want to say , y'know ? i just don't think about that , i just don't need to get it to you and i'm not a lot to be here ! ( pause . as they both walk over , they all get to get out the other . but the <unk> is on it as the next flashback of flashbacks to do that it is , it's the <unk> . it's a <unk> . the one from a little <unk> ! it's just like it to get out of this <unk> - <unk> <unk> <unk> , with it as a little of course it , it's not like a lot of the one . it's the <unk> - the only the <unk> - it's a one ! ( chandler starts laughing ) \n",
+            "joey i don't care what i'm gonna be with him for the rest you guys ! \n",
+            "chandler: i don't think i have to be a guy , but it's a lot to deal with it for the <unk> . ( the flashback goes . the camera is on one and joey is shocked and ross has been in the chair with his pants , in his mouth in the chair ! ) \n",
+            "chandler: ( looking at her , ) that's what i'm going ! i'm just saying that you can be the same thing , and i'm gonna get out . i don't know what to say ! ( chandler enters and walks back over to him , and joey and chandler start in a huge date . \n",
+            "monica: walks over , sees joey who catches his eyes , then then joey and rachel are on her shoulder . joey and joey look around . ) \n",
+            "monica:: hey ! \n",
+            "joey hey . ( he turns around to see chandler . chandler is shocked ) \n",
+            "chandler: oh no no ! no . i can't . \n",
+            "chandler: no - i know i know what you're doing here , i'm a man in the middle room ! ( the phone opens . joey enters with his face on her . ] \n",
+            "monica:: hi , i'm gonna be the next guy i had to do that , and you don't know how much happened on my <unk> . ( the gang is shocked . joey has a <unk> and <unk> a woman . ) \n",
+            "joey ( on his hand , with her hand ) hey , what are ya here ? ( points . chandler is stunned , joey stops and stops . and she sees chandler is shocked , she is still by the window and joey stops him on the door with her face to the duck , then the duck , and then he gets up and heads for her room . she is shocked . ) \n",
+            "monica:: you are ! ! ! [ chandler enters , \n",
+            "monica: has his hand and chandler has been on his coat with his head , which she takes the ring and the duck . chandler enters . joey walks up with his hand in front with her .\n"
           ],
           "name": "stdout"
         }
